@@ -2,8 +2,8 @@ package org.apereo.cas.util.http;
 
 import org.apereo.cas.util.CollectionUtils;
 import org.apereo.cas.util.MockWebServer;
+import org.apereo.cas.util.RandomUtils;
 import org.apereo.cas.util.junit.EnabledIfListeningOnPort;
-import lombok.SneakyThrows;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.hc.client5.http.ssl.NoopHostnameVerifier;
@@ -16,7 +16,7 @@ import org.springframework.http.HttpStatus;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.security.cert.X509Certificate;
 import java.util.concurrent.RejectedExecutionException;
@@ -35,8 +35,7 @@ class SimpleHttpClientTests {
         return new SimpleHttpClientFactoryBean().getObject();
     }
 
-    @SneakyThrows
-    private static SSLConnectionSocketFactory getFriendlyToAllSSLSocketFactory() {
+    private static SSLConnectionSocketFactory getFriendlyToAllSSLSocketFactory() throws Exception {
         val trm = new X509TrustManager() {
             @Override
             public void checkClientTrusted(final X509Certificate[] certs, final String authType) {
@@ -57,10 +56,9 @@ class SimpleHttpClientTests {
     }
 
     @Nested
-    @SuppressWarnings("ClassCanBeStatic")
     class DefaultTests {
         @Test
-        void verifyMessageRejected() {
+        void verifyMessageRejected() throws Throwable {
             val msg = mock(HttpMessage.class);
             when(msg.getUrl()).thenThrow(RejectedExecutionException.class);
             val result = getHttpClient().sendMessageToEndPoint(msg);
@@ -68,7 +66,7 @@ class SimpleHttpClientTests {
         }
 
         @Test
-        void verifyMessageFail() {
+        void verifyMessageFail() throws Throwable {
             val msg = mock(HttpMessage.class);
             when(msg.getUrl()).thenThrow(RuntimeException.class);
             val result = getHttpClient().sendMessageToEndPoint(msg);
@@ -76,45 +74,45 @@ class SimpleHttpClientTests {
         }
 
         @Test
-        void verifyMessageSent() throws Exception {
+        void verifyMessageSent() throws Throwable {
             try (val webServer = new MockWebServer(8165,
                 new ByteArrayResource(StringUtils.EMPTY.getBytes(StandardCharsets.UTF_8), "Output"), HttpStatus.OK)) {
                 webServer.start();
-                val result = getHttpClient().sendMessageToEndPoint(new URL("http://localhost:8165"));
+                val result = getHttpClient().sendMessageToEndPoint(new URI("http://localhost:8165").toURL());
                 assertNotNull(result);
             }
         }
 
         @Test
-        void verifyMessageRefused() throws Exception {
+        void verifyMessageRefused() throws Throwable {
             try (val webServer = new MockWebServer(8166,
                 new ByteArrayResource(StringUtils.EMPTY.getBytes(StandardCharsets.UTF_8), "Output"), HttpStatus.INTERNAL_SERVER_ERROR)) {
                 webServer.start();
-                val result = getHttpClient().sendMessageToEndPoint(new URL("http://localhost:8166"));
+                val result = getHttpClient().sendMessageToEndPoint(new URI("http://localhost:8166").toURL());
                 assertNull(result);
             }
         }
 
         @Test
-        void verifyMessageNotSent() throws Exception {
-            val result = getHttpClient().sendMessageToEndPoint(new URL("http://localhost:1234"));
+        void verifyMessageNotSent() throws Throwable {
+            val result = getHttpClient().sendMessageToEndPoint(new URI("http://localhost:1234").toURL());
             assertNull(result);
         }
 
         @Test
-        void verifyBadUrl() {
+        void verifyBadUrl() throws Throwable {
             assertFalse(getHttpClient().isValidEndPoint("https://www.whateverabc1234.org"));
         }
 
         @Test
-        void verifyInvalidHttpsUrl() {
+        void verifyInvalidHttpsUrl() throws Throwable {
             val client = getHttpClient();
             assertFalse(client.isValidEndPoint("https://wrong.host.badssl.com/"));
             assertFalse(client.isValidEndPoint("xyz"));
         }
 
         @Test
-        void verifyBypassedInvalidHttpsUrl() {
+        void verifyBypassedInvalidHttpsUrl() throws Throwable {
             val clientFactory = new SimpleHttpClientFactoryBean();
             clientFactory.setSslSocketFactory(getFriendlyToAllSSLSocketFactory());
             clientFactory.setHostnameVerifier(new NoopHostnameVerifier());
@@ -125,16 +123,17 @@ class SimpleHttpClientTests {
         }
 
         @Test
-        void verifyOkayUrl() {
+        void verifyOkayUrl() throws Throwable {
             assertTrue(getHttpClient().isValidEndPoint("https://www.google.com"));
         }
 
         @Test
-        void verifyValidRejected() throws Exception {
-            try (val webServer = new MockWebServer(8099,
+        void verifyValidRejected() throws Throwable {
+            val port = RandomUtils.nextInt(7000, 9999);
+            try (val webServer = new MockWebServer(port,
                 new ByteArrayResource(StringUtils.EMPTY.getBytes(StandardCharsets.UTF_8), "Output"), HttpStatus.INTERNAL_SERVER_ERROR)) {
                 webServer.start();
-                val result = getHttpClient().isValidEndPoint(new URL("http://localhost:8099"));
+                val result = getHttpClient().isValidEndPoint(new URI("http://localhost:8099").toURL());
                 assertFalse(result);
             }
         }
@@ -142,17 +141,16 @@ class SimpleHttpClientTests {
     }
 
     @Nested
-    @SuppressWarnings("ClassCanBeStatic")
     @EnabledIfListeningOnPort(port = 9859)
     class HttpBinTests {
         @Test
-        void verifyMessage() throws Exception {
+        void verifyMessage() throws Throwable {
             val clientFactory = new SimpleHttpClientFactoryBean();
             clientFactory.setSslSocketFactory(getFriendlyToAllSSLSocketFactory());
             clientFactory.setHostnameVerifier(new NoopHostnameVerifier());
             clientFactory.setAcceptableCodes(CollectionUtils.wrapList(200, 403));
             val client = clientFactory.getObject();
-            val msg = new HttpMessage(new URL("https://localhost:9859/post"), "{'name' : 'value'}", false);
+            val msg = new HttpMessage(new URI("https://localhost:9859/post").toURL(), "{'name' : 'value'}", false);
             val result = client.sendMessageToEndPoint(msg);
             assertTrue(result);
         }
