@@ -19,8 +19,7 @@ import org.springframework.core.io.ClassPathResource;
 
 import javax.security.auth.login.AccountNotFoundException;
 import javax.security.auth.login.FailedLoginException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -45,27 +44,22 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifySupportsProperUserCredentials() throws Exception {
-        val c = new UsernamePasswordCredential();
-
-        c.setUsername("scott");
-        c.assignPassword("rutgers");
-        assertNotNull(authenticationHandler.authenticate(c, mock(Service.class)));
+    void verifySupportsProperUserCredentials() throws Throwable {
+        val credential = new UsernamePasswordCredential();
+        credential.setUsername("scott");
+        credential.assignPassword("rutgers");
+        assertNotNull(authenticationHandler.authenticate(credential, mock(Service.class)));
     }
 
     @Test
-    void verifyDoesNotSupportBadUserCredentials() {
-        try {
-            val credential = new HttpBasedServiceCredential(
-                new URL("http://www.rutgers.edu"), CoreAuthenticationTestUtils.getRegisteredService());
-            assertFalse(authenticationHandler.supports(credential));
-        } catch (final MalformedURLException e) {
-            throw new AssertionError("MalformedURLException caught.");
-        }
+    void verifyDoesNotSupportBadUserCredentials() throws Throwable {
+        val credential = new HttpBasedServiceCredential(
+            new URI("http://www.rutgers.edu").toURL(), CoreAuthenticationTestUtils.getRegisteredService());
+        assertFalse(authenticationHandler.supports(credential));
     }
 
     @Test
-    void verifyAuthenticatesUserInFileWithDefaultSeparator() throws Exception {
+    void verifyAuthenticatesUserInFileWithDefaultSeparator() throws Throwable {
         val credential = new UsernamePasswordCredential();
 
         credential.setUsername("scott");
@@ -75,7 +69,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyFailsUserNotInFileWithDefaultSeparator() {
+    void verifyFailsUserNotInFileWithDefaultSeparator() throws Throwable {
         val credential = new UsernamePasswordCredential();
 
         credential.setUsername("fds");
@@ -85,7 +79,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyFailsNullUserName() {
+    void verifyFailsNullUserName() throws Throwable {
         val credential = new UsernamePasswordCredential();
         credential.setUsername(null);
         credential.assignPassword("user");
@@ -93,7 +87,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyFailsNullUserNameAndPassword() {
+    void verifyFailsNullUserNameAndPassword() throws Throwable {
         val credential = new UsernamePasswordCredential();
         credential.setUsername(null);
         credential.assignPassword(null);
@@ -101,7 +95,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyFailsNullPassword() {
+    void verifyFailsNullPassword() throws Throwable {
         val credential = new UsernamePasswordCredential();
         credential.setUsername("scott");
         credential.assignPassword(null);
@@ -109,7 +103,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyAuthenticatesUserInFileWithCommaSeparator() throws Exception {
+    void verifyAuthenticatesUserInFileWithCommaSeparator() throws Throwable {
         val credential = new UsernamePasswordCredential();
         authenticationHandler = new FileAuthenticationHandler(StringUtils.EMPTY, null,
             PrincipalFactoryUtils.newPrincipalFactory(), new ClassPathResource("authentication2.txt"), ",");
@@ -119,7 +113,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyFailsUserNotInFileWithCommaSeparator() {
+    void verifyFailsUserNotInFileWithCommaSeparator() throws Throwable {
         val credential = new UsernamePasswordCredential();
 
         authenticationHandler = new FileAuthenticationHandler(StringUtils.EMPTY, null,
@@ -131,7 +125,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyFailsGoodUsernameBadPassword() {
+    void verifyFailsGoodUsernameBadPassword() throws Throwable {
         val credential = new UsernamePasswordCredential();
         authenticationHandler = new FileAuthenticationHandler(StringUtils.EMPTY, null,
             PrincipalFactoryUtils.newPrincipalFactory(),
@@ -144,7 +138,7 @@ class FileAuthenticationHandlerTests {
     }
 
     @Test
-    void verifyAuthenticateNoFileName() {
+    void verifyAuthenticateNoFileName() throws Throwable {
         val credential = new UsernamePasswordCredential();
         authenticationHandler = new FileAuthenticationHandler(StringUtils.EMPTY, null,
             PrincipalFactoryUtils.newPrincipalFactory(),
